--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,10 @@
     <string name="title_activity_user">ניהול משתמש</string>
     <string name="user_settings">ניהול משתמש</string>
     <string name="about">אודות</string>
+    <string name="text_medium_size">22sp</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_back_button">חזרה</string>
+
 </resources>
