--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,15 +9,7 @@
     <string name="text_medium_size">22sp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_back_button">חזרה</string>
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+    <string-array name="options_array">
     </string-array>
     <string name="action_settings">Settings</string>
     <string name="title_activity_drawer">DrawerActivity</string>
