--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,18 +10,22 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_back_button">חזרה</string>
     <string-array name="options_array">
-        <item>משתמש</item>
-        <item>מסלולים</item>
-        <item>מפה</item>
+        <item>הגדרות משתמש</item>
+        <item>רשימת מסלולים</item>
+        <item>מה באזור</item>
         <item>משתתפים</item>
         <item>אודות</item>
-        <item>צור קשר</item>
         <item>חנות</item>
     </string-array>
     <string-array name="sites_array">
         <item>תוצרת הארץ</item>
         <item>המכללה האקדמית תל אביב-יפו</item>
         <item>שמורת הר ארבל</item>
+    </string-array>
+    <string-array name="attractions_array">
+        <item>נמל יפו</item>
+        <item>בית ביאליק</item>
+        <item>מוזיאון ההגנה</item>
     </string-array>
     <string name="action_settings">Settings</string>
     <string name="title_activity_drawer">DrawerActivity</string>
