finishing gallery and app things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item>הגדרות משתמש</item>
         <item>רשימת מסלולים</item>
         <item>מה באזור</item>
+        <item>גלריה</item>
         <item>משתתפים</item>
         <item>אודות</item>
         <item>חנות</item>
