editing users options ui and logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string-array name="options_array">
         <item>הגדרות משתמש</item>
         <item>רשימת מסלולים</item>
-        <item>מה באזור</item>
+        <item>"מה באזור ?"</item>
         <item>גלריה</item>
         <item>משתתפים</item>
         <item>אודות</item>
