--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,11 @@
     <string-array name="options_array">
         <item>הגדרות משתמש</item>
         <item>רשימת מסלולים</item>
-        <item>"מה באזור ?"</item>
+        <item>מה באזור</item>
         <item>גלריה</item>
+        <item>משתתפים</item>
         <item>אודות</item>
+        <item>חנות</item>
     </string-array>
     <string-array name="sites_array">
         <item>תוצרת הארץ</item>
@@ -28,11 +30,8 @@
     </string-array>
     <string name="action_settings">Settings</string>
     <string name="title_activity_drawer">DrawerActivity</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="drawer_open">drawer open</string>
     <string name="drawer_close">close drawer</string>
-
-
 </resources>
